--- a/e2e/package.json
+++ b/e2e/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shenlab-services-e2e",
+  "name": "alphafold-multimer-service-e2e",
   "private": true,
   "type": "module",
   "devDependencies": {
